; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_chassis-options.c_chassis_options_add.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_chassis-options.c_chassis_options_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chassis_options_add(i32* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6, i8* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i8* %6, i8** %16, align 8
  store i8* %7, i8** %17, align 8
  %19 = call i32* (...) @chassis_option_new()
  store i32* %19, i32** %18, align 8
  %20 = load i32*, i32** %18, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = load i32, i32* %12, align 4
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %14, align 4
  %25 = load i32, i32* %15, align 4
  %26 = load i8*, i8** %16, align 8
  %27 = load i8*, i8** %17, align 8
  %28 = call i64 @chassis_option_set(i32* %20, i8* %21, i32 %22, i32 %23, i32 %24, i32 %25, i8* %26, i8* %27)
  %29 = icmp ne i64 0, %28
  br i1 %29, label %35, label %30

30:                                               ; preds = %8
  %31 = load i32*, i32** %10, align 8
  %32 = load i32*, i32** %18, align 8
  %33 = call i64 @chassis_options_add_option(i32* %31, i32* %32)
  %34 = icmp ne i64 0, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %30, %8
  %36 = load i32*, i32** %18, align 8
  %37 = call i32 @chassis_option_free(i32* %36)
  store i32 -1, i32* %9, align 4
  br label %39

38:                                               ; preds = %30
  store i32 0, i32* %9, align 4
  br label %39

39:                                               ; preds = %38, %35
  %40 = load i32, i32* %9, align 4
  ret i32 %40
}

declare dso_local i32* @chassis_option_new(...) #1

declare dso_local i64 @chassis_option_set(i32*, i8*, i32, i32, i32, i32, i8*, i8*) #1

declare dso_local i64 @chassis_options_add_option(i32*, i32*) #1

declare dso_local i32 @chassis_option_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
